# OpenPet-for-Neon

./: .gitignore  README.md  README.zh-CN.md  START-OPENPET.md  import-neon.bat  index.html  install-openpet.bat  package.json  playwright.config.ts  pnpm-lock.yaml  sync-private-neon.bat  vite.config.ts
.github/: labels.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  pet_import_compatibility.yml  question.yml
.github/workflows/: ci.yml  release.yml  windows-artifact.yml
e2e/: openpet-browser.spec.ts
e2e-tauri/: wdio.conf.mjs
e2e-tauri/specs/: pet-window.e2e.mjs
hooks/: workbuddy-openpet-hook.cjs
public/pets/nia/: pet.json
scripts/: check-dev-port.mjs
skills/openpet-asset/: SKILL.md
skills/openpet-cli/: SKILL.md
skills/openpet-cli/references/: http-api.md  runtime-contract.md
skills/openpet-cli/scripts/: openpet_cli.py
skills/openpet-mcp/: SKILL.md
skills/openpet-mcp/scripts/: openpet_mcp_server.py
src/: App.tsx  PetWindow.tsx  SettingsPage.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: http_api.rs  lib.rs  main.rs
src/pet/: PetSprite.tsx  animation.ts  catalog.ts  events.ts  motion.ts  settings.ts
