[package]
name = "openpet"
version = "0.1.6"
description = "OpenPet desktop runtime for Codex-compatible pet companions"
authors = ["OpenPet contributors"]
edition = "2021"
license = "GPL-3.0-or-later"

[lib]
name = "openpet_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.1", features = [] }

[dependencies]
reqwest = { version = "0.13.3", default-features = false, features = ["json", "rustls"] }
rustls-native-certs = "0.8.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.11.0", features = ["macos-private-api", "tray-icon", "image-png"] }
tauri-plugin-dialog = "2"
tauri-plugin-process = "2.3.1"
tauri-plugin-updater = "2.10.1"
toml = "0.9"
url = "2.5.8"
